objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Ways_Account_Advertises_Rates__c</fullName>
        <label>Additional Ways Account Advertises Rates</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booking Card</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Intranet (RSM)</fullName>
                </value>
                <value>
                    <fullName>Lucite</fullName>
                </value>
                <value>
                    <fullName>Memos</fullName>
                </value>
                <value>
                    <fullName>New Hire Orientation</fullName>
                </value>
                <value>
                    <fullName>Payroll Stuffers</fullName>
                </value>
                <value>
                    <fullName>USH Channel</fullName>
                </value>
                <value>
                    <fullName>Website (TIS)</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_Vendor_Show__c</fullName>
        <description>Select option</description>
        <label>Benefits/Vendor Show</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brochures_quantity__c</fullName>
        <label>Brochures quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTA_for_collateral__c</fullName>
        <label>CTA for collateral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Choices__c</fullName>
        <label>Collateral Choices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flyers</fullName>
                </value>
                <value>
                    <fullName>Posters</fullName>
                </value>
                <value>
                    <fullName>Counter Cards</fullName>
                </value>
                <value>
                    <fullName>Pull-up Banners</fullName>
                </value>
                <value>
                    <fullName>Light Box</fullName>
                </value>
                <value>
                    <fullName>Table Top Banner</fullName>
                </value>
                <value>
                    <fullName>Standee</fullName>
                </value>
                <value>
                    <fullName>Electronic Poster</fullName>
                </value>
                <value>
                    <fullName>No Collateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_we_send_to_client__c</fullName>
        <label>Collateral we send to client</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banners</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Counter Cards</fullName>
                </value>
                <value>
                    <fullName>Flyers</fullName>
                </value>
                <value>
                    <fullName>Give-Aways</fullName>
                </value>
                <value>
                    <fullName>Mouse Pads</fullName>
                </value>
                <value>
                    <fullName>Posters</fullName>
                </value>
                <value>
                    <fullName>Stuffers</fullName>
                </value>
                <value>
                    <fullName>Travel Sales Guides</fullName>
                </value>
                <value>
                    <fullName>Triangle Tents</fullName>
                </value>
                <value>
                    <fullName>VIP Books</fullName>
                </value>
                <value>
                    <fullName>VIP Rack Card</fullName>
                </value>
                <value>
                    <fullName>Will not display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Information_Board__c</fullName>
        <label>Employee Information Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flyers Only</fullName>
                </value>
                <value>
                    <fullName>Flyers/Price List</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_of_Magazine__c</fullName>
        <label>Frequency of Magazine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Give_Aways_quantity__c</fullName>
        <label>Give Aways quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Giveaway_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giveaway Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mouse_Pads_quantity__c</fullName>
        <label>Mouse Pads quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Newsletter_Marketing_Options__c</fullName>
        <label>Newsletter Marketing Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_c__c</fullName>
        <label>Number_of_Contacts__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posters__c</fullName>
        <label>Posters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Timing_of_Brochure_Print_1__c</fullName>
        <label>Timing of Brochure Print 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timing_of_Brochure_Print_2__c</fullName>
        <label>Timing of Brochure Print 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tob__c</fullName>
        <label>Tob</label>
        <summarizedField>invy__c.invy_balance__c</summarizedField>
        <summaryForeignKey>invy__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Triangle_Tents_quantity__c</fullName>
        <label>Triangle Tents quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>AccountRec</fullName>
        <active>true</active>
        <label>AccountRec</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>